--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,19 +1,21 @@
 {% set name = "cached-property" %}
-{% set version = "1.3.0" %}
-{% set sha256 = "458e78b1c7286ece887d92c9bee829da85717994c5e3ddd253a40467f488bc81" %}
+{% set version = "1.3.1" %}
+{% set file_ext = "tar.gz" %}
+{% set hash_type = "sha256" %}
+{% set hash_value = "6562f0be134957547421dda11640e8cadfa7c23238fc4e0821ab69efdb1095f3" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  fn: {{ name }}-{{ version }}.{{ file_ext }}
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ file_ext }}
+  {{ hash_type }}: {{ hash_value }}
 
 build:
   number: 0
-  script: python setup.py install --single-version-externally-managed --record record.txt
+  script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
   host:
